# stud-os

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  init-build.sh  update_submodules.sh
dobbyOS/: CMakeLists.txt  application_settings.cmake  settings.cmake
dobbyOS/buid/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
dobbyOS/buid/elfloader-tool/: archive.archive.o.cpio  cmake_install.cmake  elfloader  linker.lds_pp
dobbyOS/buid/elfloader-tool/gen_headers/: image_start_addr.h
dobbyOS/buid/images/: Hello-image-riscv-spike
dobbyOS/buid/kernel/: cmake_install.cmake  kernel_all.i  kernel_all_pp_prune.c  linker.lds_pp
dobbyOS/buid/opensbi/: payload
dobbyOS/buid/projects/Hello/: Hello  cmake_install.cmake
dobbyOS/buid/projects/musllibc/: cmake_install.cmake
dobbyOS/buid/projects/sel4_libs/: cmake_install.cmake
dobbyOS/build_2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  launch_gdb  simulate
dobbyOS/build_2/elfloader-tool/: archive.archive.o.cpio  elfloader
dobbyOS/build_2/images/: Hello-image-riscv-spike
dobbyOS/build_2/kernel/: cmake_install.cmake  kernel_all.i  kernel_all_pp_prune.c  kernel_all_pp_prune_wrapper_temp.c
dobbyOS/build_2/opensbi/: payload
dobbyOS/build_3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
dobbyOS/build_3/elfloader-tool/: archive.archive.o.cpio  elfloader  linker.lds_pp
dobbyOS/build_3/images/: Hello-image-riscv-spike
dobbyOS/build_3/kernel/: kernel_all.i  kernel_all_pp_prune.c  linker.lds_pp
dobbyOS/build_3/libsel4/: cmake_install.cmake
dobbyOS/build_3/opensbi/: payload
dobbyOS/build_hifive/: CMakeCache.txt
dobbyOS/projects/Hello/: CMakeList.txt  CMakeLists.txt  settings.cmake
dobbyOS/projects/Hello/src/: capabilities.c  capabilities.h  cspace_threads.c  io.c  io.h  main.c  main_3.c  main_basic.c  thread.c
dobbyOS/sel4test/hallo/: .repo_fetchtimes.json
projects/capdl/capDL-tool/: capDL-tool.cmake
projects/sel4-tutorials/: settings.cmake
src/: main.c
(+561 files in other folders)
